솔루션 생성

--- a/MyFirstApp/MyFirstApp.Core/packages.config
+++ b/MyFirstApp/MyFirstApp.Core/packages.config
@@ -1,3 +1,64 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="akavache" version="5.0.0" targetFramework="portable45-net45+win8" />
+  <package id="akavache.core" version="5.0.0" targetFramework="portable45-net45+win8" />
+  <package id="akavache.sqlite3" version="5.0.0" targetFramework="portable45-net45+win8" />
+  <package id="fusillade" version="0.7.0" targetFramework="portable45-net45+win8" />
+  <package id="HockeySDK.Xamarin" version="5.0.0" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Binding" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.CodeAnalysis" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Core" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Platform" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.Accelerometer" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.All" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.Color" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.DownloadCache" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.Email" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.FieldBinding" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.File" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.Json" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.JsonLocalization" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.Location" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.Messenger" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.MethodBinding" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.Network" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.PhoneCall" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.PictureChooser" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.ResourceLoader" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.ResxLocalization" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.Share" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.Visibility" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Plugin.WebBrowser" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="MvvmCross.Tests" version="5.6.2" targetFramework="portable45-net45+win8" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="portable45-net45+win8" />
+  <package id="PCLCrypto" version="2.0.147" targetFramework="portable45-net45+win8" />
+  <package id="PCLStorage" version="1.0.2" targetFramework="portable45-net45+win8" />
+  <package id="PInvoke.BCrypt" version="0.3.2" targetFramework="portable45-net45+win8" />
+  <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="portable45-net45+win8" />
+  <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="portable45-net45+win8" />
+  <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="portable45-net45+win8" />
+  <package id="Plugin.MediaManager" version="0.3.0" targetFramework="portable45-net45+win8" />
+  <package id="Polly" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="Punchclock" version="1.1.1" targetFramework="portable45-net45+win8" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="portable45-net45+win8" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="portable45-net45+win8" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="portable45-net45+win8" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="portable45-net45+win8" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable45-net45+win8" />
+  <package id="Splat" version="1.6.2" targetFramework="portable45-net45+win8" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.0" targetFramework="portable45-net45+win8" />
+  <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Collections" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="portable45-net45+win8" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Linq" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Threading" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="Validation" version="2.2.8" targetFramework="portable45-net45+win8" />
+  <package id="Xablu.WebApiClient" version="0.10.0" targetFramework="portable45-net45+win8" />
+  <package id="Xam.Plugin.Connectivity" version="2.3.0" targetFramework="portable45-net45+win8" />
 </packages>
