--- a/MyFirstApp/MyFirstApp.iOS/packages.config
+++ b/MyFirstApp/MyFirstApp.iOS/packages.config
@@ -1,3 +1,117 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="akavache" version="5.0.0" targetFramework="xamarinios10" />
+  <package id="akavache.core" version="5.0.0" targetFramework="xamarinios10" />
+  <package id="akavache.sqlite3" version="5.0.0" targetFramework="xamarinios10" />
+  <package id="Com.Airbnb.iOS.Lottie" version="1.0.5.1" targetFramework="xamarinios10" />
+  <package id="fusillade" version="0.7.0" targetFramework="xamarinios10" />
+  <package id="HockeySDK.Xamarin" version="5.0.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="1.0.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.Extensions.Primitives" version="1.0.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="MvvmCross" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Binding" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.CodeAnalysis" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Core" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.iOS.Support" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.iOS.Support.XamarinSidebar" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Platform" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.Accelerometer" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.All" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.Color" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.DownloadCache" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.Email" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.FieldBinding" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.File" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.Json" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.JsonLocalization" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.Location" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.Messenger" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.MethodBinding" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.Network" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.PhoneCall" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.PictureChooser" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.ResourceLoader" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.ResxLocalization" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.Share" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.Visibility" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.WebBrowser" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Tests" version="5.6.2" targetFramework="xamarinios10" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="xamarinios10" />
+  <package id="PCLCrypto" version="2.0.147" targetFramework="xamarinios10" />
+  <package id="PCLStorage" version="1.0.2" targetFramework="xamarinios10" />
+  <package id="PInvoke.BCrypt" version="0.3.2" targetFramework="xamarinios10" />
+  <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="xamarinios10" />
+  <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="xamarinios10" />
+  <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="xamarinios10" />
+  <package id="Plugin.MediaManager" version="0.3.0" targetFramework="xamarinios10" />
+  <package id="Polly" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="Punchclock" version="1.1.1" targetFramework="xamarinios10" />
+  <package id="refit" version="3.0.1" targetFramework="xamarinios10" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="SidebarNavigation" version="1.9.4" targetFramework="xamarinios10" />
+  <package id="Splat" version="1.6.2" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.ios_unified.static" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.provider.internal.ios_unified" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Buffers" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="xamarinios10" />
+  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Console" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.IO" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Linq" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Http" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Text.Encodings.Web" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Threading" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="Validation" version="2.2.8" targetFramework="xamarinios10" />
+  <package id="Xablu.WebApiClient" version="0.10.0" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.Connectivity" version="2.3.0" targetFramework="xamarinios10" />
 </packages>
